--- a/src/scss/objects/_spacing.scss
+++ b/src/scss/objects/_spacing.scss
@@ -16,7 +16,3 @@
         margin-top: 1.5rem;
     }
 }
-
-.ons-breadcrumbs + .ons-grid {
-    margin-top: -1rem;
-}
